@@ -119,28 +119,85 @@ class TestPyOperator(unittest.TestCase):
     def testPyIndOperator(self):
         'Testing pyIndOperator'
         def indFunc(ind):
-            'do something to info1'
             ind.setInfo(ind.info('info1')+1, 'info1')
             return True
+        def testFunc(ind):
+            self.assertEqual(ind.info('info1'), 1)
+            return True
         def indFunc1(ind, param):
-            'do something to info2'
             ind.setInfo(ind.info('info2')+param[1], 'info2')
             return True
+        def testFunc1(ind):
+            self.assertEqual(ind.info('info2'), 2)
+            return True
+        def indFunc2(ind, genotype):
+            self.assertEqual(len(genotype), 4)
+            self.assertEqual(genotype, (1, 1, 2, 2))
+            ind.setInfo(sum(genotype), 'info1')
+            return True
+        def testFunc2(ind):
+            self.assertEqual(ind.info('info1'), 6)
+            return True
+        def indFunc3(ind, genotype, param):
+            self.assertEqual(len(genotype), 4)
+            self.assertEqual(genotype, (1, 1, 2, 2))
+            ind.setInfo(sum(genotype) + param[0], 'info1')
+            return True
+        def testFunc3(ind):
+            self.assertEqual(ind.info('info1'), 4)
+            return True
+        def indFunc4(ind):
+            return [1.5]
+        def testFunc4(ind):
+            self.assertEqual(ind.info('info1'), 1.5)
+            return True            
+        def indFunc5(ind, param):
+            return param
+        def testFunc5(ind):
+            self.assertEqual(ind.info('info1'), 3)
+            self.assertEqual(ind.info('info2'), 4)
+            return True            
+        def indFunc6(ind, genotype):
+            self.assertEqual(len(genotype), 4)
+            self.assertEqual(genotype, (1, 1, 2, 2))
+            return (sum(genotype),)
+        def testFunc6(ind):
+            self.assertEqual(ind.info('info1'), 6)
+            return True            
+        def indFunc7(ind, genotype, param):
+            self.assertEqual(len(genotype), 4)
+            self.assertEqual(genotype, (1, 1, 2, 2))
+            return (sum(genotype) + param[0],)
+        def testFunc7(ind):
+            self.assertEqual(ind.info('info2'), 8)
+            return True            
         # use noMating, otherwise info will *not* be inherited
-        simu = simulator(population(10, loci=[1], infoFields=['info1', 'info2']), 
+        simu = simulator(population(10, loci=[2,5], infoFields=['info1', 'info2']), 
             noMating(), rep=1)
-        simu.evolve(
-            preOps = [initByValue([0])],
+        simu.step(
+            preOps = [
+                initByValue(value=[1], atLoci=[2]),
+                initByValue(value=[2], atLoci=[4]),
+                ],
             ops = [
-                #pyEval(r'"%d\n"%gen'),
-                #pyExec('print pop.indInfo("info1")', exposePop=True),
                 pyIndOperator(func=indFunc),
-                pyIndOperator(func=indFunc1, param=(1,2)),
+                pyIndOperator(func=testFunc),
+                pyIndOperator(func=indFunc1, param=(3,2)),
+                pyIndOperator(func=testFunc1),
+                pyIndOperator(func=indFunc2, loci=[2,4]),
+                pyIndOperator(func=testFunc2),
+                pyIndOperator(func=indFunc3, loci=[2,4], param=(-2,)),
+                pyIndOperator(func=testFunc3),
+                pyIndOperator(func=indFunc4, infoFields=['info1']),
+                pyIndOperator(func=testFunc4),
+                pyIndOperator(func=indFunc5, param=(3,4), infoFields=['info1', 'info2']),
+                pyIndOperator(func=testFunc5),
+                pyIndOperator(func=indFunc6, loci=[2,4], infoFields=['info1']),
+                pyIndOperator(func=testFunc6),
+                pyIndOperator(func=indFunc7, loci=[2,4], param=(2,), infoFields=['info2']),
+                pyIndOperator(func=testFunc7 ),
             ],
-            end = 5
         )
-        self.assertEqual(simu.population(0).indInfo('info1', True), tuple([6.0]*10))
-        self.assertEqual(simu.population(0).indInfo('info2', True), tuple([12.]*10))
             
         
 if __name__ == '__main__':
