@@ -7,6 +7,7 @@ version 0.8.0 - Not released, available at https://svn.sourceforge.net/svnroot/s
   - NEW: add subPop(s) parameters to selectors, allowing different selection pressure 
 		in different subpopulations
   - NEW: add subPops parameter to intializers, working the same as subPop
+  - NEW: extending pyIndOperator with handling of loci and infoFields
 
 version 0.7.10 - (Rev 987) May 20, 2007
   - BUG: fix a memory leak bug with LoadPopulation
